# saba-chan

./: .dockerignore  .gitignore  API_SPEC.md  AUDIT_REPORT.md  CHANGELOG.md  COMPLETION_CHECKLIST.md  Cargo.toml  EXTENSION_MIGRATION_BLUEPRINT.md  IMPROVEMENTS.md  LICENSE  PROJECT_GUIDE.md  README.md  build.rs  clippy.toml  package-lock.json  relay-server.md  release-manifest.json  run-daemon.bat  run-daemon.sh  rustfmt.toml  start-all.bat  start-all.sh  start_all.py  test_config.json  vitest-result.txt
.github/: WORKFLOWS_GUIDE.md  copilot-instructions.md
.github/scripts/: generate-manifest.py  package-release.py
.github/workflows/: build.yml  ci.yml  coverage.yml  quick-test.yml  release.yml  test.yml
config/: global.toml  saba-chan.service  updater.toml
discord_bot/: .env.example  bot-config.json  i18n.js  index.js  package-lock.json  package.json  run-bot.bat  run-bot.sh
discord_bot/core/: handler.js  ipc.js  processor.js  relayAgent.js  resolver.js
discord_bot/extensions/: easter_eggs.js  music.js  musicChannelUI.js  rps.js
discord_bot/test/: integration.test.js  ipc-timeout.test.js  music.test.js
discord_bot/utils/: aliasResolver.js  constants.js
docs/: BACKEND_TESTING_GUIDE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLI_SYSTEM_TEST.md  COMMUNICATION_SPEC.md  CROSS_PLATFORM.md  ERROR_HANDLING.md  FIX_404_ERROR.md  GUI_TESTING.md  IMPLEMENTATION_NOTES.md  LINUX_PORTING_GUIDE.md  PALWORLD_API_GUIDE.md  PALWORLD_API_INTEGRATION.md  PROJECT_GUIDE.md  PROTOCOL_CLIENT_DESIGN.md  QUICK_START.md  README.md  SYSTEM_COMPLETION_SUMMARY.md  TESTING.md  TEST_QUICK_REFERENCE.md  USAGE_GUIDE.md  USER_GUIDE.md  memo.md
docs/archive/: RCON_COMPLETION.md  RCON_TEST.md  test_rcon.py
electron_gui/: TESTING.md  main.js  package-lock.json  package.json  preload.js  run-gui.bat  run-gui.sh  vite.config.js
electron_gui/public/: index.html
electron_gui/src/: App.css  App.js  CommandModal.css  CommandModal.js  Modal.css  Modals.js  i18n.js  index.js  setupTests.js
electron_gui/src/components/: Icon.js  index.js
electron_gui/src/test/: App.test.js  integration.test.js  main.test.js
electron_gui/src/utils/: errorHandler.js  settingsManager.js
extensions/: __init__.py  rcon.py  steamcmd.py  ue4_ini.py
extensions/docker/: compose_manager.py  docker_engine.py  manifest.json
extensions/docker/gui/: package.json  vite.config.js
extensions/music/: package.json
extensions/steamcmd/: manifest.json  test_steamcmd.py
extensions/ue4_ini/: manifest.json  test_ue4_ini.py
installer/: KNOWN_ISSUES.md
installer/gui/src/: index.html  installer.css  installer.js  theme.css
installer/gui/src-tauri/: Cargo.toml  tauri.conf.json
installer/gui/src-tauri/capabilities/: default.json
installer/gui/src-tauri/src/: github.rs  lib.rs  main.rs  registry.rs  runtime_bootstrap.rs  shortcuts.rs  uninstall.rs
locales/de/: bot.json  cli.json  common.json  gui.json
locales/en/: bot.json  cli.json  common.json  gui.json
locales/es/: bot.json  cli.json  common.json  gui.json
locales/fr/: bot.json  cli.json  common.json  gui.json
locales/ja/: bot.json  cli.json  common.json  gui.json
locales/ko/: bot.json  cli.json  common.json  gui.json
locales/pt-BR/: bot.json  cli.json  common.json  gui.json
locales/ru/: bot.json  cli.json  common.json  gui.json
locales/zh-CN/: bot.json  cli.json  common.json  gui.json
locales/zh-TW/: bot.json  cli.json  common.json  gui.json
modules/_shared/: __init__.py  rcon.py  test_ue4_ini.py  ue4_ini.py
modules/_template/: README.md  lifecycle.py  module.toml
modules/minecraft/: lifecycle.py  module.toml
modules/minecraft/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt-BR.json  ru.json  zh-CN.json  zh-TW.json
modules/palworld/: lifecycle.py  module.toml
modules/palworld/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  (+4 more)
saba-chan-cli/: Cargo.toml  README.md  build.rs  test_modules.rs
saba-chan-cli/src/: cli_config.rs  client.rs  config.rs  gui_config.rs  i18n.rs  main.rs  module_registry.rs  process.rs  tui.rs  tui_old.rs
saba-chan-cli/src/tui/: app.rs  commands.rs  mod.rs  render.rs  screens.rs  theme.rs
saba-chan-cli/src/tui/screens/: bot.rs  create_instance.rs  daemon.rs  dashboard.rs  extensions.rs  mod.rs  modules.rs  server_detail.rs  servers.rs  settings.rs  updates.rs
saba-chan-gui/: TESTING.md  ZUSTAND_MIGRATION.md  biome.json  index.html  main.js  package-lock.json  package.json  preload.js  vite.config.js
saba-chan-gui/extensions/: test_ue4_ini.py
saba-chan-gui/src/: App.css  App.js  builtinExtensions.js  i18n.js  index.js  setupTests.js  theme.css
scripts/: _update_icons.py  build-core.ps1  build-docker-io.ps1  build-windows.ps1  ci-test.ps1  make-executable.sh  quick-test.ps1  run-all-tests.ps1  run-test.ps1  run-test.sh  sync_locales.py  test-gui.ps1  test-integration.ps1
scripts/.mock-assets/: manifest.json  mock-release-server.js
shared/: constants.js
src/: boot_selector.rs  daemon_log.rs  lib.rs  main.rs  path_detector.rs  process_monitor.rs  utils.rs
src/config/: mod.rs
src/config_store/: mod.rs
src/docker/: mod.rs
src/extension/: mod.rs
src/instance/: mod.rs
src/ipc/: auth.rs  mod.rs  updates.rs
src/node_env/: mod.rs
src/plugin/: mod.rs
src/protocol/: client.rs  mod.rs  rcon.rs  rcon_pool.rs  rest.rs
src/python_env/: mod.rs
src/resource/: mod.rs
src/supervisor/: error.rs  managed_process.rs  migration.rs  mod.rs  module_loader.rs  process.rs  state_machine.rs
src/validator/: mod.rs
tests/: daemon_integration.rs  e2e_cross_component.rs  stress_test.rs  updater_integration.rs
tests/fixtures/: mock_ext_process.py
updater/: Cargo.toml
updater/gui/src/: index.html  updater.css  updater.js
updater/gui/src-tauri/: Cargo.toml  tauri.conf.json
updater/gui/src-tauri/capabilities/: default.json
updater/gui/src-tauri/src/: cli.rs  cli.rs.removed  config.rs  lib.rs  lib.rs.bak  main.rs
updater/src/: constants.rs  error.rs  foreground.rs  github.rs  integrity.rs  ipc.rs  lib.rs  queue.rs  scheduler.rs  tests.rs  version.rs  worker.rs
(+100 files in other folders)
