[package]
name = "saba-chan"
version = "0.1.0"
edition = "2021"
description = "Modular game server management platform"
repository = "https://github.com/YOUR_USERNAME/saba-chan"
license = "MIT"
keywords = ["game-server", "palworld", "minecraft", "management"]

[[bin]]
name = "core_daemon"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
toml = "0.5"
axum = "0.7"
zip = "0.6"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
glob = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1", features = ["full"] }
