[package]
name = "saba-core"
version = "0.1.0"
edition = "2021"
description = "Modular game server management platform"
repository = "https://github.com/YOUR_USERNAME/saba-chan"
license = "MIT"
keywords = ["game-server", "palworld", "minecraft", "management"]

[workspace]
members = [".", "updater", "updater/gui/src-tauri", "saba-chan-cli"]

[[bin]]
name = "saba-core"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
toml = "0.5"
axum = "0.7"
zip = "0.6"
tempfile = "3.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
glob = "0.3"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
byteorder = "1.5"
ureq = { version = "2.9", default-features = true, features = ["json", "tls"] }
base64 = "0.21"
sysinfo = "0.30"
socket2 = "0.5"
saba-chan-updater-lib = { path = "updater" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[dependencies.tower]
version = "0.4"

[dependencies.tower-http]
version = "0.5"
features = ["trace"]

[dependencies.hyper]
version = "1"
features = ["full"]
[dev-dependencies]
regex-lite = "0.1"
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true