[package]
name = "saba-chan-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for Saba-chan Core Daemon"
repository = "https://github.com/YOUR_USERNAME/saba-chan"
license = "MIT"
keywords = ["cli", "server-management", "game-server"]

[[bin]]
name = "saba-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
ratatui = "0.28"
crossterm = "0.28"
toml = "0.8"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
