[package]
name = "saba-chan-cli"
version = "0.1.1"
edition = "2021"
authors = ["WareAoba"]
description = "CLI client for Saba-chan Core Daemon"
repository = "https://github.com/WareAoba/saba-chan"
license = "MIT"
keywords = ["cli", "server-management", "game-server"]

[[bin]]
name = "saba-chan-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
ratatui = "0.28"
crossterm = "0.28"
toml = "0.8"
saba-chan-updater-lib = { path = "../updater" }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3"
