[package]
name = "saba-chan-updater-lib"
version = "0.1.0"
edition = "2021"
description = "Update/installer logic library for Saba-chan"

[dependencies]
anyhow = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
toml = "0.5"
zip = "0.6"
