[package]
name = "saba-chan-installer"
version = "0.1.1"
edition = "2021"
authors = ["WareAoba"]
description = "Standalone installer/uninstaller GUI for Saba-chan (Tauri)"

[lib]
name = "saba_chan_installer_app"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
sys-locale = "0.3"
saba-chan-updater-lib = { path = "../../../updater" }
futures-util = "0.3"
toml = "0.8"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
] }
winreg = "0.52"
