[package]
name = "saba-chan-updater"
version = "0.1.0"
edition = "2021"
description = "Standalone updater/installer GUI for Saba-chan (Tauri)"

[lib]
name = "saba_chan_updater_app"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
saba-chan-updater-lib = { path = "../.." }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
